[package]
name = "samson"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11.17", features = ["json", "gzip"] }
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
axum = "^0.6.18"
anyhow = "^1.0.71"
chrono = { version = "^0.4.24", features = ["serde"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.17"
csv = "^1.2.1"
tokio = { version = "^1.28.1", features = ["full"] }
futures = "^0.3.28"
