[package]
name = "samson"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11.17", features = ["json", "gzip"] }
tokio = { version = "^1.28.1", features = ["full"] }
serde = { version = "^1.0.163", features = ["derive"] }
serde_json = "^1.0.96"
chrono = { version = "^0.4.24", features = ["serde"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.17"
futures = "^0.3.28"
once_cell = "^1.17.1"
regex = "^1.8.1"
csv = "^1.2.1"
urlencoding = "^2.1.2"
clap = { version = "^4.2.7", features = ["derive"] }
axum = "^0.6.18"
anyhow = "^1.0.71"